[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://icon_mod_2.png" type="Texture" id=3]

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "The arrow states should be 2:
- Normal Arrow
- Last Conversation Arrow
(More than that will be useless since the node only covers those two)"
}
arrowStates = [ ExtResource( 3 ), ExtResource( 2 ) ]
path_of_dialogue_file = "res://jsonFIles/test.json"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -248.0
margin_right = 384.0
margin_bottom = -32.0

[node name="DialogueBox" type="ColorRect" parent="MarginContainer"]
margin_right = 768.0
margin_bottom = 216.0
color = Color( 0.152941, 0.152941, 0.152941, 1 )

[node name="TextMargin" type="MarginContainer" parent="MarginContainer/DialogueBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -76.0
margin_right = 640.0
margin_bottom = 84.0

[node name="nextTextTimer" type="Timer" parent="MarginContainer/DialogueBox/TextMargin"]
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/DialogueBox/TextMargin"]
margin_right = 608.0
margin_bottom = 160.0
custom_constants/separation = 10

[node name="NameLabel" type="Label" parent="MarginContainer/DialogueBox/TextMargin/VBoxContainer"]
margin_right = 608.0
margin_bottom = 14.0
size_flags_vertical = 0
text = "LOREM IPSUM"

[node name="TextLabel" type="Label" parent="MarginContainer/DialogueBox/TextMargin/VBoxContainer"]
margin_top = 24.0
margin_right = 608.0
margin_bottom = 38.0
size_flags_vertical = 0
text = "LOREM IPSUM"

[node name="ArrowMargin" type="MarginContainer" parent="MarginContainer/DialogueBox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -88.0
margin_right = -32.0
margin_bottom = -24.0

[node name="ArrowTexture" type="TextureRect" parent="MarginContainer/DialogueBox/ArrowMargin"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )
